fixed header size on small screens

--- a/sass/activatoradmin.scss
+++ b/sass/activatoradmin.scss
@@ -217,7 +217,8 @@ body {
 
 @media screen and (max-width: $medium-width) {
   .jumbotron h1 {
-    font-size: 35px;
+    font-size: 32px;
+    margin-top: 40px;
   }
   .list-unstyled li input {
     margin-right: 100%;
